--- a/app_settings.json
+++ b/app_settings.json
@@ -1331,7 +1331,7 @@
 		},
 		{
 			"id": "36",
-			"url": "https://drive.google.com/drive/u/1/folders/1JZ-NpZM4OR36XQjGOckZUMfvStGHSN_G",
+			"url": "https://drive.google.com/file/d/1u0yMiDsRLAxaZsZv0Ro2TnWtCr98IaAn/view?usp=sharing",
 			"name": "ING101U - Neighbourhoods - Unit 6 - Kitap_pdf",
 			"actions": [{
 					"engagement_lower_bound": 65,
@@ -1369,7 +1369,7 @@
 		},
 		{
 			"id": "37",
-			"url": "https://www.youtube.com/watch?v=tU1zZ-SgjO4&t=1s",
+			"url": "https://www.youtube.com/watch?v=Yq0uER1Yajo&ab_channel=A%C3%A7%C4%B1k%C3%B6%C4%9FretimSistemi-Anadolu%C3%9Cniversitesi",
 			"name": "ING101U -Neighbourhoods - Unit 6 - Konu Tabanlı Video",
 			"actions": [{
 					"engagement_lower_bound": 65,
@@ -2091,7 +2091,7 @@
 		},
 		{
 			"id": "56",
-			"url": "https://www.youtube.com/watch?v=hYIAvesrEX4",
+			"url": "https://ekampus.anadolu.edu.tr/#/materialdisplay?sourceurl=https%3A%2F%2Fvk21.anadolu.edu.tr%2Fplayback%2Fpresentation%2F2.3%2F9a62fc2549586379fcd1cbee3d735da54927b960-1638895281026&turnbackurl=%2Fmaterials%2FPersonel%2FING101U%2F%C4%B0NG%C4%B0L%C4%B0ZCE%20I%2FLIVE_COURSE%2FALL&materialid=415285&materialrate=0&materialname=Canl%C4%B1%20Ders%20Kay%C4%B1tlar%C4%B1&courseurlcode=ING101U&materialtype=LIVE_COURSE&fileextension=youtube/link",
 			"name": "ING101U - Shopping - Unit 8 - Canlı Ders Kayıtları-2021-22_hafta 8",
 			"actions": [{
 					"engagement_lower_bound": 65,
