--- a/app_settings.json
+++ b/app_settings.json
@@ -1,7 +1,7 @@
 {
 	"contents": [{
 			"id": "1",
-			"url": "https://drive.google.com/drive/u/1/folders/1JZ-NpZM4OR36XQjGOckZUMfvStGHSN_G",
+			"url": "https://drive.google.com/file/d/15lLh6E2294XI7Q0pWV7xZ2KeDPEoiKEc/view?usp=sharing",
 			"name": "ING101U - All About You - Unit 1 - Kitap_pdf",
 			"actions": [{
 					"engagement_lower_bound": 65,
@@ -153,7 +153,7 @@
 		},
 		{
 			"id": "5",
-			"url": "İhttps://www.youtube.com/watch?v=t3ZA70hlLKw",
+			"url": "https://www.youtube.com/watch?v=t3ZA70hlLKw",
 			"name": "ING101U - All About You - Unit 1 - Soru Tabanlı Video_1 Soru 1 Cevap",
 			"actions": [{
 					"engagement_lower_bound": 65,
@@ -267,7 +267,7 @@
 		},
 		{
 			"id": "8",
-			"url": "https://drive.google.com/drive/u/1/folders/1JZ-NpZM4OR36XQjGOckZUMfvStGHSN_G",
+			"url": "https://drive.google.com/file/d/1SbEKAmcUjBRSxA9uFu1yOq1XTv31hLj-/view?usp=sharing",
 			"name": "ING101U - All About You - Unit 2 - In Class - Kitap_pdf",
 			"actions": [{
 					"engagement_lower_bound": 65,
@@ -533,7 +533,7 @@
 		},
 		{
 			"id": "15",
-			"url": "https://drive.google.com/drive/u/1/folders/1JZ-NpZM4OR36XQjGOckZUMfvStGHSN_G",
+			"url": "https://drive.google.com/file/d/1lAzONo8rROxUZ8ujM2fltJW2bXn1zj83/view?usp=sharing",
 			"name": "ING101U - Favorite People - Unit 3 - Kitap_pdf",
 			"actions": [{
 					"engagement_lower_bound": 65,
@@ -799,7 +799,7 @@
 		},
 		{
 			"id": "22",
-			"url": "https://drive.google.com/drive/u/1/folders/1JZ-NpZM4OR36XQjGOckZUMfvStGHSN_G",
+			"url": "https://drive.google.com/file/d/1PrLWy5vqfB8J_ShEKUAVZdC1P_bVHbwo/view?usp=sharing",
 			"name": "ING101U - Everyday Life - Unit 4 - Kitap_pdf",
 			"actions": [{
 					"engagement_lower_bound": 65,
@@ -1065,7 +1065,7 @@
 		},
 		{
 			"id": "29",
-			"url": "https://drive.google.com/drive/u/1/my-drive",
+			"url": "https://drive.google.com/file/d/1S4aYDseik-odXJjQpuCohBdQ4HMJB3th/view?usp=sharing",
 			"name": "ING101U - Free Time - Unit 5 - Kitap_pdf",
 			"actions": [{
 					"engagement_lower_bound": 65,
@@ -1141,7 +1141,7 @@
 		},
 		{
 			"id": "31",
-			"url": "https://www.youtube.com/watch?v=3tyVzdCI56E",
+			"url": "https://www.youtube.com/watch?v=P7Ms1I3MrEA&t=1s",
 			"name": "ING101U - Free Time - Unit 5 - Uzman Anlatımı",
 			"actions": [{
 					"engagement_lower_bound": 65,
